[tool.poetry]
name = "agent-rag"
version = "0.1.0"
description = ""
authors = ["Elon Salfati <elon@salfati.group>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.14"
langgraph = "^0.2.61"
langchain-core = "^0.3.29"
langchain-community = "^0.3.14"
langchain-anthropic = "^0.3.1"
langchain-postgres = "^0.0.12"
python-dotenv = "^1.0.1"
psycopg = { version = "^3.2.4", extras = ["binary", "pool"] }
openai = "^1.59.5"
langchain-openai = "^0.2.14"
langchain-unstructured = "^0.1.6"
unstructured = "^0.16.13"
anthropic = "^0.42.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
typer = "^0.15.1"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
